# robobo_gazebo

./: CMakeLists.txt  README.md  package.xml  setup.py
include/robobo/: infrared_range.h  robobo_camera.h  robobo_camera_utils.h  robobo_imu_sensor.h
launch/: robobo_gazebo.launch
models/box/: box.config  box.sdf
models/robobo/: model.config  model.sdf
models/robobo/meshes/: left_wheel_collision.dae  right_wheel_collision.dae
models/test_track/: test_track.config
nodes/: robobo_irs  robobo_services_server
plugins/: IR_sensors.cpp  encoders.cpp  infrared_range.cpp  left_wheel_motor.cpp  move_pan_tilt.cpp  move_wheels.cpp  pan_motor.cpp  right_wheel_motor.cpp  robobo_camera.cpp  robobo_camera_utils.cpp  robobo_imu_sensor.cpp  tilt_motor.cpp
src/robobo/: __init__.py  robobo_irs.py  robobo_topics_services.py
worlds/: pruebas.world
